test/bad/multisym-digit.fnl
(print tbl.2keyed4you)
